plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.11'
    id 'io.spring.dependency-management' version '1.0.11.RELEASE'
}
group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '11'
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    //    swagger
    implementation 'org.springdoc:springdoc-openapi-ui:1.7.0'
    implementation 'org.springdoc:springdoc-openapi-security:1.7.0'

    compileOnly 'org.projectlombok:lombok'
// mariaDB
    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
//    postgresql
    runtimeOnly 'org.postgresql:postgresql'
//    mariadb
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'

//    hibernate spatial
    implementation 'org.hibernate:hibernate-spatial:5.6.11.Final'

//    redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

//    security
    implementation 'org.springframework.boot:spring-boot-starter-security'

//    jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

//    google api
    implementation group: 'com.google.api-client', name: 'google-api-client-jackson2', version: '2.2.0'


//    lombok
    annotationProcessor 'org.projectlombok:lombok'
//    test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

//    s3
    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'

}

tasks.named('test') {
    useJUnitPlatform()
}
